--- a/style/style.scss
+++ b/style/style.scss
@@ -94,6 +94,7 @@ header {
 
         .logo {
             position: absolute;
+            top: $positionValue;
             left: $positionValue;
         }
     }
@@ -179,7 +180,8 @@ nav {
     nav {
         display: block;
         background-color: transparent;
-
+        top: $positionValue;
+        right: 0;
         width: 80vw;
         margin: 0 auto;
         z-index: 2;
