--- a/style/style.css
+++ b/style/style.css
@@ -24,11 +24,11 @@ header {
   background-position: center;
 }
 header .cta {
+  margin: 0 auto;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin: 0 auto;
 }
 header .cta h1 {
   position: absolute;
@@ -49,7 +49,7 @@ header .cta img.arrow {
 header .navbar {
   position: relative;
   top: 32px;
-  width: 100vw;
+  width: 100%;
   height: 80px;
   margin-right: 0;
 }
@@ -135,12 +135,16 @@ ul li:last-child a {
   }
 
   ul {
+    left: 0;
+    right: 0;
+    width: 100%;
+    text-align: right;
     display: block;
     position: absolute;
-    top: 0;
-    right: 0;
-    height: 0;
-    transform: translate(0);
+    background-color: transparent;
+    top: -20px;
+    padding-right: 64px;
+    transform: none;
   }
   ul li {
     margin-right: 32px;
@@ -153,10 +157,11 @@ ul li:last-child a {
     color: white;
   }
   ul li:last-child {
-    width: 10rem;
     margin: 0 auto;
     background: white;
     border-radius: 50px;
+    width: auto;
+    padding: 20px;
   }
   ul li:last-child a {
     text-transform: uppercase;
