--- a/style/style.scss
+++ b/style/style.scss
@@ -57,11 +57,17 @@ header {
     background-position: center;
 
     .cta {
-        @include absolutePositioner(50%);
         margin: 0 auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 
         h1 {
-            @include absolutePositioner(30%);
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             letter-spacing: 0.5rem;
             font-size: 36px;
             text-transform: uppercase;
@@ -79,7 +85,7 @@ header {
     .navbar {
         position: relative;
         top: $positionValue;
-        width: 100vw;
+        width: 100%;
         height: 80px;
         margin-right: 0;
 
@@ -98,7 +104,10 @@ header {
 
 ul {
     display: none;
-    @include absolutePositioner(12rem);
+    position: absolute;
+    top: 12rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: $primaryWhite;
     height: 14rem;
     width: 80vw;
@@ -168,12 +177,19 @@ ul {
     }
 
     ul {
+        // white button (contact)
+        $buttonnavPadding: 20px;
+        // further styling
+        left: 0;
+        right: 0;
+        width: 100%;
+        text-align: right;
         display: block;
         position: absolute;
-        top: 0;
-        right: 0;
-        height: 0;
-        transform: translate(0);
+        background-color: transparent;
+        top: -$buttonnavPadding;
+        padding-right: 64px;
+        transform: none;
 
         li {
             margin-right: 32px;
@@ -188,10 +204,12 @@ ul {
         }
 
         li:last-child {
-            width: 10rem;
+            // width: 5rem;
             margin: 0 auto;
             background: $primaryWhite;
             border-radius: 50px;
+            width: auto;
+            padding: $buttonnavPadding;
 
             a {
                 text-transform: uppercase;
