--- a/style/style.scss
+++ b/style/style.scss
@@ -104,6 +104,7 @@ header {
 
 ul {
     display: none;
+    font-family: "Fraunces", serif;
     position: absolute;
     top: 12rem;
     left: 50%;
@@ -125,19 +126,22 @@ ul {
     li {
         list-style: none;
         text-align: center;
-        padding: 1rem;
+        width: 50%;
+        margin: 0 auto;
 
         a {
             text-decoration: none;
+            display: block;
+            padding: 1rem;
+            width: 100%;
             color: $neutralDarkGrayishblue;
         }
     }
 
     li:last-child {
-        margin: 0 auto;
-        background: $primaryYellow;
-        border-radius: 50px;
         a {
+            background: $primaryYellow;
+            border-radius: 50px;
             text-transform: uppercase;
             color: $neutralDarkDesaturatedblue;
         }
@@ -165,7 +169,8 @@ ul {
 
             img.arrow {
                 height: 120px;
-                @include absolutePositioner(20%);
+                @include absolutePositioner(50%);
+                margin-top: 120px;
             }
         }
     }
@@ -175,46 +180,50 @@ ul {
     }
 
     ul {
-        // white button (contact)
-        $buttonnavPadding: 20px;
-        // further styling
-        left: 0;
-        right: 0;
-        width: 100%;
-        text-align: right;
         display: block;
         position: absolute;
-        background-color: transparent;
-        top: -$buttonnavPadding;
+        top: 0;
+        right: 0;
+        transform: translate(0);
         padding-right: 64px;
-        transform: none;
+        text-align: right;
+        background-color: transparent;
+        height: 14rem;
+        width: auto;
+        margin: 0 auto;
+        z-index: 2;
+
+        .container {
+            padding: 1rem 0;
+        }
+
+        img {
+            display: none;
+        }
 
         li {
-            margin-right: 32px;
+            display: inline;
+            list-style: none;
             text-align: center;
-            padding: 8px 16px;
-            display: inline-block;
-            padding: 0;
+            width: auto;
+            margin: 0 1rem 0 auto;
 
             a {
                 color: $primaryWhite;
-                &:hover {
-                    background: $primaryDarkModerateCyan;
-                }
+                text-decoration: none;
+                display: inline;
+                padding: 1rem;
+                width: auto;
             }
         }
 
         li:last-child {
-            // width: 5rem;
-            margin: 0 auto;
-            background: $primaryWhite;
-            border-radius: 50px;
-            width: auto;
-            padding: $buttonnavPadding;
-
             a {
-                text-transform: uppercase;
                 color: $neutralDarkDesaturatedblue;
+
+                background: $primaryWhite;
+                border-radius: 50px;
+                text-transform: uppercase;
             }
         }
     }
