--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,5 @@
 @use './variables.scss'as v;
 
-
 * {
     font-size: 18px;
     margin: 0;
@@ -61,7 +60,7 @@ header {
         }
     }
 
-    .navbar {
+    nav {
         width: 100%;
         top: v.$positionValue;
         position: relative;
