--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -93,10 +93,6 @@ ul {
     width: 80vw;
     z-index: 2;
 
-    .container {
-        padding: 1rem 0;
-    }
-
     img {
         display: none;
     }
@@ -158,7 +154,6 @@ ul {
 
     ul {
         background-color: transparent;
-        width: auto;
         display: block;
         height: 14rem;
         margin: 0 auto;
@@ -167,7 +162,8 @@ ul {
         right: 0;
         text-align: right;
         top: 0;
-        width: auto;
+        transform: translateX(-30%);
+        width: 70%;
         z-index: 2;
 
         .container {
