--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,9 +1,10 @@
 // layout
-$mobile: 425px;
+$mobile: 768px;
 $mobilebreakpoint: 376px;
 $desktop: 1440px;
 $fontSizeMain: 16px;
 $positionValue: 32px;
+$borderRadius: 50px;
 
 // colors primary
 $primarySoftRed: hsl(7, 99%, 70%);
