working on mixin

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -199,5 +199,13 @@ ul {
                 text-transform: uppercase;
             }
         }
+
+        a {
+            transition: 0.2s;
+            &:hover {
+                color: v.$primaryWhite;
+                background: v.$neutralGrayishblue;
+            }
+        }
     }
 }
